# ytensor

./: .gitignore  README.md  README_zh.md  ytensor.hpp
ad/: IMPLEMENTATION_SUMMARY.md  README.md  ad.hpp  computation_graph.cpp  computation_graph.hpp  graph_edge.cpp  graph_edge.hpp  graph_executor.cpp  graph_executor.hpp  graph_node.cpp  graph_node.hpp  test_graph.cpp  test_integration.cpp  ymodel2_graph_builder.cpp  ymodel2_graph_builder.hpp
doc/: ad_module_cn.md  build.py  template.html
doc/en/: README.mdx
doc/en/api/YTensor/: overview.mdx
doc/en/api/YTensor/access/: data_ptr.mdx  indexing.mdx  iteration.mdx
doc/en/api/YTensor/construction/: constructors.mdx  factories.mdx  memory.mdx
doc/en/api/YTensor/math/: arithmetic.mdx  broadcast.mdx  matmul.mdx  reduction.mdx
doc/en/api/YTensor/shape/: dimension.mdx  query.mdx  reshape.mdx  slice.mdx  transpose.mdx
doc/en/api/YTensor/utilities/: conversion.mdx  properties.mdx
doc/en/api/YTensorBase/: overview.mdx
doc/en/api/YTensorBase/access/: data_ptr.mdx  dtype.mdx  indexing.mdx
doc/en/api/YTensorBase/construction/: constructors.mdx  factories.mdx  memory.mdx
doc/en/api/YTensorBase/math/: arithmetic.mdx  broadcast.mdx  matmul.mdx  reduction.mdx
doc/en/api/YTensorBase/shape/: concat_split.mdx  dimension.mdx  query.mdx  reshape.mdx  slice.mdx  transpose.mdx
doc/en/api/YTensorBase/utilities/: conversion.mdx  properties.mdx
doc/en/api/function/: activation.mdx  attention.mdx  fused.mdx  loss.mdx  matmul.mdx  normalization.mdx  pooling.mdx
doc/en/api/guides/: backend_selection.mdx  broadcast_guide.mdx  common_pitfalls.mdx  memory_model.mdx  performance_tips.mdx  python_differences.mdx  quick_start.mdx
doc/en/api/infos/: backend.mdx  constants.mdx  types.mdx
doc/en/api/io/: YTensorIO.mdx  compression.mdx  file_format.mdx  tensor_info.mdx
doc/en/api/kernel/: type_dispatch.mdx
doc/en/installation/: build_options.mdx  installation.mdx
doc/zh/: README.mdx
doc/zh/api/YTensor/: overview.mdx
doc/zh/api/YTensor/access/: data_ptr.mdx  indexing.mdx  iteration.mdx
doc/zh/api/YTensor/construction/: constructors.mdx  factories.mdx  memory.mdx
doc/zh/api/YTensor/math/: arithmetic.mdx  broadcast.mdx  matmul.mdx  reduction.mdx
doc/zh/api/YTensor/shape/: dimension.mdx  query.mdx  reshape.mdx  slice.mdx  transpose.mdx
doc/zh/api/YTensor/utilities/: conversion.mdx  properties.mdx
doc/zh/api/YTensorBase/: overview.mdx
doc/zh/api/YTensorBase/access/: data_ptr.mdx  dtype.mdx  indexing.mdx
doc/zh/api/YTensorBase/construction/: constructors.mdx  factories.mdx  memory.mdx
doc/zh/api/YTensorBase/math/: arithmetic.mdx  broadcast.mdx  matmul.mdx  reduction.mdx
doc/zh/api/YTensorBase/shape/: concat_split.mdx  dimension.mdx  (+4 more)
doc/zh/api/function/: activation.mdx  attention.mdx  fused.mdx  loss.mdx  matmul.mdx  normalization.mdx  pooling.mdx
doc/zh/api/guides/: backend_selection.mdx  broadcast_guide.mdx  common_pitfalls.mdx  memory_model.mdx  performance_tips.mdx  python_differences.mdx  quick_start.mdx
doc/zh/api/infos/: backend.mdx  constants.mdx  types.mdx
doc/zh/api/io/: YTensorIO.mdx  compression.mdx  file_format.mdx  tensor_info.mdx
doc/zh/api/kernel/: type_dispatch.mdx
doc/zh/installation/: build_options.mdx  installation.mdx
example/ad_demo/: CMakeLists.txt  main.cpp
example/convert/: __init__.py  safetensors2yt.py  ytfile.py
example/numpy2yt/: converter.py
example/qwen3/: .gitignore  CMakeLists.txt  main.cpp
example/qwen3/include/: qwen3.hpp  tokenlizer.hpp
example/qwen3/src/: qwen3.cpp  tokenlizer.cpp
example/train_cifar10/: train_cifar.cpp
example/ymodel2-s-2/: CMakeLists.txt  kompute_shader_manifest_test.cpp  main.cpp  parity_test.cpp  tokenlizer.cpp  ymodel2.cpp  ymodel2.hpp
example/ymodel2-s-2/shaders/: elementwise_add.comp.hlsl
include/: ad.hpp  gpu_memory.hpp  ytensor_base.hpp  ytensor_base_math.hpp  ytensor_concepts.hpp  ytensor_core.hpp  ytensor_extern_templates.hpp  ytensor_function.hpp  ytensor_infos.hpp  ytensor_io.hpp  ytensor_math.hpp  ytensor_preinstantiate.hpp  ytensor_types.hpp
include/ad/: graph.hpp  graph_edge.hpp  graph_node.hpp  graph_runtime.hpp  graph_serialization.hpp  operator.hpp  ops.hpp
include/function/: activation.hpp  loss.hpp  normalization.hpp  ops.hpp
include/kernel/: broadcast.hpp  gemm.hpp  math_utils.hpp  matmul_single.hpp  memory_utils.hpp  parallel_for.hpp  type_dispatch.hpp
include/kernel/avx2/: flash_attention.hpp  gemm_utils.hpp  hdot.hpp  hgemm.hpp  hgemv.hpp  hger.hpp  sdot.hpp  sgemm.hpp  sgemv.hpp  sger.hpp
include/kernel/gemm/: sgemm.hpp
include/kompute/: kompute_dispatch.hpp  kompute_memory.hpp  kompute_shader_registry.hpp
include/kompute/shaders/: binary_arith.comp.hlsl  binary_arith_float.comp.hlsl  binary_cmp.comp.hlsl  broadcast_inplace.comp.hlsl  matmul.comp.hlsl  matview.comp.hlsl
include/types/: bfloat16.hpp  float_spec.hpp
lib/: CMakeLists.txt
lib/include/: ytensor.hpp  ytensor_single.hpp
lib/src/: ytensor_library.cpp
shaders/kompute/: binary_arith.comp.hlsl  binary_arith_float.comp.hlsl  binary_cmp.comp.hlsl  broadcast_inplace.comp.hlsl  matmul.comp.hlsl  matview.comp.hlsl  reduction_max.comp.hlsl  reduction_sum.comp.hlsl
single-header/: packer.py  ytensor_single.hpp
src/: ytensor.inl  ytensor_base.inl  ytensor_base_math.inl  ytensor_base_templates.inl  ytensor_core.inl  ytensor_function.inl  ytensor_io.inl  ytensor_io_templates.inl  ytensor_math.inl
src/ad/: graph.cpp  graph.cpp.bak  graph_edge.inl  graph_node.inl  graph_runtime.inl  graph_serialization.inl  ops.cpp
src/function/: activation.inl  loss.inl  normalization.inl  ops.inl
src/kernel/: broadcast.inl  memory_utils.inl  parallel_for.inl  type_dispatch.inl
src/kernel/avx2/: flash_attention.inl  gemm_utils.inl  hdot.inl  hgemm.inl  hgemv.inl  hger.inl  sdot.inl  sgemm.inl  sgemv.inl  sger.inl
src/kompute/: kompute_dispatch.inl  kompute_memory.inl  kompute_shader_registry.inl
test/: CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  test_ad_ffn.cpp  test_ad_graph.cpp  test_gpu_dispatch.cpp  test_shader_manifest.cpp
(+2 files in other folders)
